// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/viewTitle add random icon 1`] = `
<div>
  <div
    class="ViewTitle"
  >
    <div
      class="add-buttons add-visible"
    >
      <button
        type="button"
      >
        <svg
          class="EmojiIcon Icon"
          viewBox="0 0 496 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 448c-110.3 0-200-89.7-200-200S137.7 56 248 56s200 89.7 200 200-89.7 200-200 200zm-80-216c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm4 72.6c-20.8 25-51.5 39.4-84 39.4s-63.2-14.3-84-39.4c-8.5-10.2-23.7-11.5-33.8-3.1-10.2 8.5-11.5 23.6-3.1 33.8 30 36 74.1 56.6 120.9 56.6s90.9-20.6 120.9-56.6c8.5-10.2 7.1-25.3-3.1-33.8-10.1-8.4-25.3-7.1-33.8 3.1z"
          />
        </svg>
        <span>
          Add icon
        </span>
      </button>
      <button
        type="button"
      >
        <svg
          class="ShowIcon Icon"
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M288 144a110.94 110.94 0 0 0-31.24 5 55.4 55.4 0 0 1 7.24 27 56 56 0 0 1-56 56 55.4 55.4 0 0 1-27-7.24A111.71 111.71 0 1 0 288 144zm284.52 97.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400c-98.65 0-189.09-55-237.93-144C98.91 167 189.34 112 288 112s189.09 55 237.93 144C477.1 345 386.66 400 288 400z"
          />
        </svg>
        <span>
          show description
        </span>
      </button>
    </div>
    <div
      class="title"
    >
      <input
        class="Editable title"
        placeholder="Untitled board"
        spellcheck="true"
        title="board title"
        value="board title"
      />
    </div>
  </div>
</div>
`;

exports[`components/viewTitle hide description 1`] = `
<div>
  <div
    class="ViewTitle"
  >
    <div
      class="add-buttons add-visible"
    >
      <button
        type="button"
      >
        <svg
          class="ShowIcon Icon"
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M288 144a110.94 110.94 0 0 0-31.24 5 55.4 55.4 0 0 1 7.24 27 56 56 0 0 1-56 56 55.4 55.4 0 0 1-27-7.24A111.71 111.71 0 1 0 288 144zm284.52 97.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400c-98.65 0-189.09-55-237.93-144C98.91 167 189.34 112 288 112s189.09 55 237.93 144C477.1 345 386.66 400 288 400z"
          />
        </svg>
        <span>
          show description
        </span>
      </button>
    </div>
    <div
      class="title"
    >
      <div
        class="BlockIconSelector"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <div
            class="octo-icon size-m"
          >
            <span>
              i
            </span>
          </div>
        </div>
      </div>
      <input
        class="Editable title"
        placeholder="Untitled board"
        spellcheck="true"
        title="board title"
        value="board title"
      />
    </div>
  </div>
</div>
`;

exports[`components/viewTitle should match snapshot 1`] = `
<div>
  <div
    class="ViewTitle"
  >
    <div
      class="add-buttons add-visible"
    >
      <button
        type="button"
      >
        <svg
          class="HideIcon Icon"
          viewBox="0 0 640 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M634 471L36 3.51A16 16 0 0 0 13.51 6l-10 12.49A16 16 0 0 0 6 41l598 467.49a16 16 0 0 0 22.49-2.49l10-12.49A16 16 0 0 0 634 471zM296.79 146.47l134.79 105.38C429.36 191.91 380.48 144 320 144a112.26 112.26 0 0 0-23.21 2.47zm46.42 219.07L208.42 260.16C210.65 320.09 259.53 368 320 368a113 113 0 0 0 23.21-2.46zM320 112c98.65 0 189.09 55 237.93 144a285.53 285.53 0 0 1-44 60.2l37.74 29.5a333.7 333.7 0 0 0 52.9-75.11 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64c-36.7 0-71.71 7-104.63 18.81l46.41 36.29c18.94-4.3 38.34-7.1 58.22-7.1zm0 288c-98.65 0-189.08-55-237.93-144a285.47 285.47 0 0 1 44.05-60.19l-37.74-29.5a333.6 333.6 0 0 0-52.89 75.1 32.35 32.35 0 0 0 0 29.19C89.72 376.41 197.08 448 320 448c36.7 0 71.71-7.05 104.63-18.81l-46.41-36.28C359.28 397.2 339.89 400 320 400z"
          />
        </svg>
        <span>
          hide description
        </span>
      </button>
    </div>
    <div
      class="title"
    >
      <div
        class="BlockIconSelector"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <div
            class="octo-icon size-m"
          >
            <span>
              i
            </span>
          </div>
        </div>
      </div>
      <input
        class="Editable title"
        placeholder="Untitled board"
        spellcheck="true"
        title="board title"
        value="board title"
      />
    </div>
    <div
      class="description"
    >
      <div
        class="MarkdownEditor octo-editor  "
      >
        <div
          class="octo-editor-preview"
          data-testid="preview-element"
        />
        <div
          class="MarkdownEditorInput MarkdownEditorInput--IsNotEditing"
        >
          <div
            class="DraftEditor-root"
          >
            <div
              class="DraftEditor-editorContainer"
            >
              <div
                aria-autocomplete="list"
                aria-expanded="false"
                class="notranslate public-DraftEditor-content"
                contenteditable="true"
                role="combobox"
                spellcheck="false"
                style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
              >
                <div
                  data-contents="true"
                >
                  <div
                    class=""
                    data-block="true"
                    data-editor="123"
                    data-offset-key="123-0-0"
                  >
                    <div
                      class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                      data-offset-key="123-0-0"
                    >
                      <span
                        data-offset-key="123-0-0"
                      >
                        <span
                          data-text="true"
                        >
                          description
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/viewTitle should match snapshot readonly 1`] = `
<div>
  <div
    class="ViewTitle"
  >
    <div
      class="add-buttons add-visible"
    />
    <div
      class="title"
    >
      <div
        class="BlockIconSelector"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <div
            class="octo-icon size-m"
          >
            <span>
              i
            </span>
          </div>
        </div>
      </div>
      <input
        class="Editable readonly title"
        placeholder="Untitled board"
        readonly=""
        spellcheck="true"
        title="board title"
        value="board title"
      />
    </div>
    <div
      class="description"
    >
      <div
        class="MarkdownEditor octo-editor  "
      >
        <div
          class="octo-editor-preview"
          data-testid="preview-element"
        />
        <div
          class="MarkdownEditorInput MarkdownEditorInput--IsNotEditing"
        >
          <div
            class="DraftEditor-root"
          >
            <div
              class="DraftEditor-editorContainer"
            >
              <div
                aria-autocomplete="list"
                aria-expanded="false"
                class="notranslate public-DraftEditor-content"
                contenteditable="true"
                role="combobox"
                spellcheck="false"
                style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
              >
                <div
                  data-contents="true"
                >
                  <div
                    class=""
                    data-block="true"
                    data-editor="123"
                    data-offset-key="123-0-0"
                  >
                    <div
                      class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                      data-offset-key="123-0-0"
                    >
                      <span
                        data-offset-key="123-0-0"
                      >
                        <span
                          data-text="true"
                        >
                          description
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/viewTitle show description 1`] = `
<div>
  <div
    class="ViewTitle"
  >
    <div
      class="add-buttons add-visible"
    >
      <button
        type="button"
      >
        <svg
          class="HideIcon Icon"
          viewBox="0 0 640 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M634 471L36 3.51A16 16 0 0 0 13.51 6l-10 12.49A16 16 0 0 0 6 41l598 467.49a16 16 0 0 0 22.49-2.49l10-12.49A16 16 0 0 0 634 471zM296.79 146.47l134.79 105.38C429.36 191.91 380.48 144 320 144a112.26 112.26 0 0 0-23.21 2.47zm46.42 219.07L208.42 260.16C210.65 320.09 259.53 368 320 368a113 113 0 0 0 23.21-2.46zM320 112c98.65 0 189.09 55 237.93 144a285.53 285.53 0 0 1-44 60.2l37.74 29.5a333.7 333.7 0 0 0 52.9-75.11 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64c-36.7 0-71.71 7-104.63 18.81l46.41 36.29c18.94-4.3 38.34-7.1 58.22-7.1zm0 288c-98.65 0-189.08-55-237.93-144a285.47 285.47 0 0 1 44.05-60.19l-37.74-29.5a333.6 333.6 0 0 0-52.89 75.1 32.35 32.35 0 0 0 0 29.19C89.72 376.41 197.08 448 320 448c36.7 0 71.71-7.05 104.63-18.81l-46.41-36.28C359.28 397.2 339.89 400 320 400z"
          />
        </svg>
        <span>
          hide description
        </span>
      </button>
    </div>
    <div
      class="title"
    >
      <div
        class="BlockIconSelector"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <div
            class="octo-icon size-m"
          >
            <span>
              i
            </span>
          </div>
        </div>
      </div>
      <input
        class="Editable title"
        placeholder="Untitled board"
        spellcheck="true"
        title="board title"
        value="board title"
      />
    </div>
    <div
      class="description"
    >
      <div
        class="MarkdownEditor octo-editor  "
      >
        <div
          class="octo-editor-preview"
          data-testid="preview-element"
        />
        <div
          class="MarkdownEditorInput MarkdownEditorInput--IsNotEditing"
        >
          <div
            class="DraftEditor-root"
          >
            <div
              class="DraftEditor-editorContainer"
            >
              <div
                aria-autocomplete="list"
                aria-expanded="false"
                class="notranslate public-DraftEditor-content"
                contenteditable="true"
                role="combobox"
                spellcheck="false"
                style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
              >
                <div
                  data-contents="true"
                >
                  <div
                    class=""
                    data-block="true"
                    data-editor="123"
                    data-offset-key="123-0-0"
                  >
                    <div
                      class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                      data-offset-key="123-0-0"
                    >
                      <span
                        data-offset-key="123-0-0"
                      >
                        <span
                          data-text="true"
                        >
                          description
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
